--- a/src/main/res/layout/activity_all_album.xml
+++ b/src/main/res/layout/activity_all_album.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.MainActivity">
-
+    tools:context=".allalbum.AllAlbumActivity">
 
     <com.jingchen.pulltorefresh.PullToRefreshLayout
         android:id="@+id/refresh_view"
@@ -15,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -50,38 +50,29 @@
                         android:textSize="22sp" />
                 </RelativeLayout>
 
-                <include layout="@layout/head_view" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="30dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/recent_story"
-                        android:textColor="@color/black"
-                        android:textSize="28sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+                    android:layout_marginTop="30dp"
+                    android:text="全部专辑"
+                    android:textColor="@color/black"
+                    android:textSize="28sp"
+                    android:textStyle="bold" />
 
                 <com.efrobot.talkstory.utils.NoScrollGridView
-                    android:id="@+id/recent_story_grid_view"
+                    android:id="@+id/all_album_grid_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
-                    android:layout_marginTop="20dp"
-                    android:gravity="center"
-                    android:horizontalSpacing="20dp"
-                    android:numColumns="2"
-                    android:verticalSpacing="10dp" />
-
+                    android:layout_marginTop="10dp"
+                    android:gravity="center_horizontal"
+                    android:horizontalSpacing="15dp"
+                    android:numColumns="5"
+                    android:verticalSpacing="15sp" />
 
             </LinearLayout>
+
         </com.jingchen.pulltorefresh.PullableScrollView>
     </com.jingchen.pulltorefresh.PullToRefreshLayout>
+
 </RelativeLayout>
