--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -3,4 +3,27 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="base_gray">#CCCCCC</color>
+    <color name="black">#000000</color>
+    <color name="green">#0f0</color>
+    <color name="search_unpress">#666666</color>
+    <color name="search_press">#333333</color>
+
+
+    <color name="player_bg">#D7D7D7</color>
+
+    <color name="rounded_image_color">#666666</color>
+    <color name="rounded_image_color_orange">#FD9825</color>
+
+    <color name="base_text_color">#333333</color>
+
+
+    <color name="album_base_color">#D9D9D9</color>
+    <color name="base_999">#999999</color>
+    <color name="base_text99">#99CCCCCC</color>
+    <color name="base_text55">#55CCCCCC</color>
+
+
+
 </resources>
