--- a/src/main/res/layout/layout_detail_head.xml
+++ b/src/main/res/layout/layout_detail_head.xml
@@ -60,6 +60,7 @@
                     android:id="@+id/item_teach_image"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:src="@mipmap/default_image"
                     />
 
                 <TextView
