--- a/src/main/res/drawable/selector_search_text.xml
+++ b/src/main/res/drawable/selector_search_text.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--被选中时的颜色-->
-    <item android:state_selected="true" android:drawable="@color/selected_color" />
-    <!--获得焦点时的颜色-->
-    <item android:state_focused="true" android:drawable="@color/selected_color" />
-    <!--点击时的颜色-->
+    <!--&lt;!&ndash;被选中时的颜色&ndash;&gt;-->
+    <!--<item android:state_selected="true" android:drawable="@color/selected_color" />-->
+    <!--&lt;!&ndash;获得焦点时的颜色&ndash;&gt;-->
+    <!--<item android:state_focused="true" android:drawable="@color/selected_color" />-->
+    <!--&lt;!&ndash;点击时的颜色&ndash;&gt;-->
     <item android:state_pressed="true" android:drawable="@color/selected_color" />
     <!-- 默认颜色 -->
     <item android:drawable="@color/unselected_color"/>
