--- a/src/main/res/layout/activity_all_album.xml
+++ b/src/main/res/layout/activity_all_album.xml
@@ -66,6 +66,7 @@
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
                     android:gravity="center_horizontal"
                     android:horizontalSpacing="15dp"
                     android:numColumns="5"
