--- a/src/main/res/layout/head_view.xml
+++ b/src/main/res/layout/head_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -33,10 +33,11 @@
     <com.efrobot.talkstory.utils.HorizontalListView
         android:id="@+id/competitive_products_grid_view"
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:gravity="center"
+        android:minHeight="330dp"
         />
 
 </LinearLayout>
