--- a/src/main/res/layout/item_album.xml
+++ b/src/main/res/layout/item_album.xml
@@ -16,8 +16,8 @@
     <TextView
         android:id="@+id/album_title"
         android:layout_width="190dp"
-        android:layout_height="50dp"
-        android:maxLines="2"
+        android:layout_height="wrap_content"
+        android:minHeight="60dp"
         android:text=""
         android:textColor="#BB333333"
         android:textSize="18sp" />
