--- a/src/main/res/layout/item_detail_list.xml
+++ b/src/main/res/layout/item_detail_list.xml
@@ -19,7 +19,7 @@
             android:id="@+id/item_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/default_image" />
 
         <LinearLayout
             android:layout_width="wrap_content"
