--- a/src/main/res/layout/item_recent_story.xml
+++ b/src/main/res/layout/item_recent_story.xml
@@ -4,16 +4,17 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     >
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        >
 
         <ImageView
             android:id="@+id/recent_story_image"
-            android:layout_width="wrap_content"
+            android:layout_width="550dp"
             android:layout_height="250dp"
             />
         <co.songlcy.circleimage.view.CircleImage
@@ -50,9 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:maxWidth="350dp"
-        android:minHeight="40dp"
-        android:maxLines="2"
+        android:maxWidth="370dp"
+        android:minHeight="50dp"
         android:textColor="@color/base_text_color"
         android:textSize="18sp"
         android:text="还是空间的划分空间开房间"
