--- a/src/main/res/layout/activity_play.xml
+++ b/src/main/res/layout/activity_play.xml
@@ -1,237 +1,269 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/v4_drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".play.PlayMediaActivity">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="950dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_bar_color"
-        android:gravity="center_vertical">
+        android:orientation="horizontal"
+        tools:context=".play.PlayMediaActivity">
 
-        <TextView
-            android:id="@+id/play_back_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@mipmap/base_back_image" />
+        <RelativeLayout
+            android:layout_width="950dp"
+            android:layout_height="match_parent"
+            android:background="@color/main_bar_color"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/play_back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="20dp"
+                android:background="@mipmap/base_back_image" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/album_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Geronimo Stilton 老鼠记者"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center"
+                    android:minHeight="80dp"
+                    android:text="Book 5 Four Mice Deep in the Jungle\n鼠胆神威（Part 4）"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="40dp">
+
+                    <com.efrobot.talkstory.utils.CircleImageView
+                        android:layout_width="370dp"
+                        android:layout_height="370dp"
+                        android:layout_gravity="center"
+                        android:src="#ffffffff" />
+
+                    <com.efrobot.talkstory.utils.CircleImageView
+                        android:id="@+id/rotate_image"
+                        android:layout_width="350dp"
+                        android:layout_height="350dp"
+                        android:layout_gravity="center"
+                        app:civ_border_color="#00000000"
+                        app:civ_border_width="4dp" />
+
+                </FrameLayout>
+
+                <com.zhy.view.flowlayout.TagFlowLayout
+                    android:id="@+id/language_flow_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:minWidth="450dp"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="30dp"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="120dp"
+                    android:layout_marginRight="120dp"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/current_play_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:text="00:00"
+                        android:textColor="@color/white"
+                        android:textSize="22.5sp" />
+
+                    <TextView
+                        android:id="@+id/total_play_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="15dp"
+                        android:text="00:00"
+                        android:textColor="@color/white"
+                        android:textSize="22.5sp" />
+
+                    <SeekBar
+                        android:id="@+id/seekBar"
+                        style="@style/m_play_page_progress_bar_style"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/current_play_time"
+                        android:layout_marginTop="10dp"
+                        android:maxHeight="8dip"
+                        android:minHeight="8dip" />
+
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/play_mode_btn"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:background="@mipmap/player_random"
+                        android:padding="10dp" />
+
+                    <ImageView
+                        android:id="@+id/play_last_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="180dp"
+                        android:background="@mipmap/player_last" />
+
+                    <ImageView
+                        android:id="@+id/play_and_pause_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="80dp"
+                        android:background="@mipmap/player_start" />
+
+                    <ImageView
+                        android:id="@+id/play_next_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="80dp"
+                        android:background="@mipmap/player_next" />
+
+                    <ImageView
+                        android:id="@+id/play_recent_list_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="180dp"
+                        android:background="@mipmap/player_recent_list" />
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <TextView
-                android:id="@+id/album_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Geronimo Stilton 老鼠记者"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15dp"
-                android:gravity="center"
-                android:text="Book 5 Four Mice Deep in the Jungle\n鼠胆神威（Part 4）"
-                android:minHeight="80dp"
-                android:textColor="@color/white"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                />
+                android:layout_marginTop="60dp"
+                android:text="唯有故事和童年\n不可辜负"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
 
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="40dp">
+                android:layout_marginTop="60dp">
 
-                <com.efrobot.talkstory.utils.CircleImageView
-                    android:layout_width="370dp"
-                    android:layout_height="370dp"
-                    android:layout_gravity="center"
-                    android:src="#ffffffff" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@mipmap/balloon" />
 
-                <com.efrobot.talkstory.utils.CircleImageView
-                    android:id="@+id/rotate_image"
-                    android:layout_width="350dp"
-                    android:layout_height="350dp"
-                    android:layout_gravity="center"
-                    app:civ_border_color="#00000000"
-                    app:civ_border_width="4dp" />
-
+                <ImageView
+                    android:layout_width="220dp"
+                    android:layout_height="220dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="180dp"
+                    android:background="@mipmap/two_dimension_code" />
             </FrameLayout>
 
-            <com.zhy.view.flowlayout.TagFlowLayout
-                android:id="@+id/language_flow_layout"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:minWidth="450dp"
-                android:visibility="gone"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="30dp"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="120dp"
-                android:layout_marginRight="120dp"
-                android:layout_marginTop="20dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/current_play_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="00:00"
-                    android:layout_marginLeft="15dp"
-                    android:textColor="@color/white"
-                    android:textSize="22.5sp" />
-
-                <TextView
-                    android:id="@+id/total_play_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:text="00:00"
-                    android:layout_marginRight="15dp"
-                    android:textColor="@color/white"
-                    android:textSize="22.5sp" />
-
-                <SeekBar
-                    android:id="@+id/seekBar"
-                    style="@style/m_play_page_progress_bar_style"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/current_play_time"
-                    android:layout_marginTop="10dp"
-                    android:maxHeight="8dip"
-                    android:minHeight="8dip"
-                    />
-
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:gravity="center"
+                android:text="微信扫描二维码关注\n新东方绘本馆"
+                android:textColor="#ff666666"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-                <ImageView
-                    android:id="@+id/play_mode_btn"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:background="@mipmap/player_random"
-                    android:padding="10dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:text="新东方旗下0-12岁少儿在线学习平台"
+                android:textColor="#ff666666"
+                android:textSize="15sp" />
 
-                <ImageView
-                    android:id="@+id/play_last_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="180dp"
-                    android:background="@mipmap/player_last" />
-
-                <ImageView
-                    android:id="@+id/play_and_pause_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="80dp"
-                    android:background="@mipmap/player_start" />
-
-                <ImageView
-                    android:id="@+id/play_next_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="80dp"
-                    android:background="@mipmap/player_next" />
-
-                <ImageView
-                    android:id="@+id/play_recent_list_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="180dp"
-                    android:background="@mipmap/player_recent_list" />
-            </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:background="#FAFAFA"
         android:orientation="vertical"
-        android:visibility="visible">
+        >
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="60dp"
-            android:text="唯有故事和童年\n不可辜负"
-            android:textColor="@color/black"
-            android:textSize="30sp" />
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="bottom"
+            android:text="播放列表"
+            android:textColor="@color/album_item_teacher_name_color"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingLeft="20dp"
+            />
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="60dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@mipmap/balloon" />
-
-            <ImageView
-                android:layout_width="220dp"
-                android:layout_height="220dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="180dp"
-                android:background="@mipmap/two_dimension_code" />
-        </FrameLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:text="微信扫描二维码关注\n新东方绘本馆"
-            android:textColor="#ff666666"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:text="新东方旗下0-12岁少儿在线学习平台"
-            android:textColor="#ff666666"
-            android:textSize="15sp" />
+        <ListView
+            android:id="@+id/play_pop_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:choiceMode="singleChoice"
+            android:layout_marginTop="20dp"
+            />
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
