--- a/src/main/res/layout/item_pop_text.xml
+++ b/src/main/res/layout/item_pop_text.xml
@@ -2,26 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="60dp"
     android:gravity="center_vertical"
     >
 
-    <ImageView
-        android:id="@+id/pop_item_image_view"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@mipmap/history_image"
-        android:layout_marginLeft="20dp"
-        />
-
     <TextView
         android:id="@+id/pop_item_text_view"
-        android:layout_width="400dp"
-        android:layout_height="50dp"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:layout_marginLeft="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:paddingLeft="20dp"
+        android:textColor="@color/text_ff666666"
+        android:textSize="16sp"
+        android:gravity="center_vertical"
+        android:layout_weight="1"
+        android:singleLine="true"
         />
+
+    <ImageView
+        android:id="@+id/pop_item_image_view"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@mipmap/history_image"
+        android:layout_marginRight="40dp"
+        />
+
 
 </LinearLayout>
