--- a/src/main/res/layout/popup_history_lauout.xml
+++ b/src/main/res/layout/popup_history_lauout.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="220dp"
-    android:layout_height="550dp"
+    android:layout_width="550dp"
+    android:layout_height="match_parent"
     >
 
     <ListView
         android:id="@+id/pop_list_view"
-        android:layout_width="wrap_content"
-        android:layout_height="550dp"
+        android:layout_width="550dp"
+        android:layout_height="match_parent"
         android:background="#F2F2F2"
         />
 
