--- a/src/main/res/layout/item_version.xml
+++ b/src/main/res/layout/item_version.xml
@@ -9,4 +9,5 @@
     android:paddingLeft="25dp"
     android:paddingRight="25dp"
     android:paddingTop="6dp"
+    android:textColor="@color/white"
     android:textSize="15sp" />
